Update UserProfileService.java
Changed UserprofileService to develop UserprofileService